add fully optimized cosine distance

--- a/analyses/optimize_cosine_distance.ipynb
+++ b/analyses/optimize_cosine_distance.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c368e96a",
+   "id": "5640305c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08c2d5c3",
+   "id": "074c918a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8956540",
+   "id": "8144dbbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17fce8d0",
+   "id": "1be9c249",
    "metadata": {},
    "source": [
     "# read processed 10-Ks in"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fcf58017",
+   "id": "57c15998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8307ff86",
+   "id": "1ea13d36",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "415c6863",
+   "id": "944fb3d5",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ec1057b",
+   "id": "4b3b9799",
    "metadata": {},
    "outputs": [
     {
@@ -132,24 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "59d42489",
+   "execution_count": 11,
+   "id": "7e8e64d9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m     dfs \u001b[38;5;241m=\u001b[39m pool\u001b[38;5;241m.\u001b[39mmap(read_csv_wrapper, \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(metadata)))\n\u001b[1;32m     19\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(dfs)\n\u001b[0;32m---> 20\u001b[0m df \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;241m~\u001b[39m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misnull()]\n",
-      "File \u001b[0;32m~/miniforge3/envs/advancedpython/lib/python3.10/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3762\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/miniforge3/envs/advancedpython/lib/python3.10/site-packages/pandas/core/indexes/range.py:349\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    347\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m    348\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[0;32m--> 349\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[1;32m    350\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n\u001b[1;32m    351\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def read_csv_wrapper(i):\n",
     "    try:\n",
@@ -160,7 +146,7 @@
     "        df = pd.read_csv(path)\n",
     "        df['ticker'] = ticker\n",
     "        df['path'] = path\n",
-    "        df['filing_date'] = row['FILING_DATE']\n",
+    "        df['filing_date'] = row['DATE_FILED']\n",
     "        return df\n",
     "    except:\n",
     "        # some were unable to read because the parse failed \n",
@@ -170,12 +156,18 @@
     "    dfs = pool.map(read_csv_wrapper, range(len(metadata)))\n",
     "    \n",
     "df = pd.concat(dfs)\n",
-    "df = df[~df['text'].isnull()]"
+    "# filter out failed reads\n",
+    "df = df[~df['text'].isnull()]\n",
+    "\n",
+    "# order the df\n",
+    "df = df.sort_values(['ticker', 'item', 'filing_date'])\n",
+    "df['index'] = np.arange(len(df))\n",
+    "df['lead_index'] = df.groupby(['ticker', 'item'])['index'].shift(-1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21bdd2b5",
+   "id": "e1fe6f05",
    "metadata": {},
    "source": [
     "# Text cleaning"
@@ -183,10 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a725ce3",
+   "execution_count": 12,
+   "id": "d1f17eba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 s ± 183 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "df.head(1000)['text'].str.replace('\\W', ' ', regex=True)\\\n",
@@ -197,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75c14147",
+   "execution_count": 13,
+   "id": "58b15f46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b806e71",
+   "execution_count": 14,
+   "id": "c07b5f2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.92 s ± 341 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "df.head(1000)['text'].apply(clean_string)"
@@ -222,8 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42f4ceaa",
+   "execution_count": 15,
+   "id": "cc85da6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,10 +240,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a263769f",
+   "execution_count": 16,
+   "id": "ac23acff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b65ad02e0e254d51b4c99791e99b1ee9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c90b1679ae2a4a7fb2e82e91d52ad8e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02fd1554c54448cbad62e27c00d78741",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45392bad97b34e4ba17748adebe3baf1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3be6a1707ca421fbbd0b9ab910bc47e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64521922ca9345d8a60a39eed0458a01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "707c551bc3ce46c3a19fb47f2f2add36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06da6b4ebca44325ab8be61dcafcb381",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=63), Label(value='0 / 63'))), HBox…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.18 s ± 272 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "df.head(1000)['text'].parallel_apply(clean_string)"
@@ -243,17 +371,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "659623a3",
+   "execution_count": 17,
+   "id": "ebbcc1b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1fe8a821eae40ecb7adc4b619e36c3d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=1556), Label(value='0 / 1556'))), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df['text'] = df['text'].parallel_apply(clean_string)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e9c0d26",
+   "id": "9ab0bf5c",
    "metadata": {},
    "source": [
     "# transform to tfidf"
@@ -261,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45636fdb",
+   "execution_count": 18,
+   "id": "91c8f5d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,29 +414,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5807909",
+   "execution_count": 42,
+   "id": "83154bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparison_df = df[~df['lead_index'].isnull()].copy()\n",
+    "comparison_df['lead_index'] = comparison_df['lead_index'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "21f0490d",
    "metadata": {},
    "outputs": [],
    "source": [
     "vectorizer = TfidfVectorizer()\n",
     "\n",
-    "tfidf = vectorizer.fit_transform(df['text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69173568",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfidf"
+    "tfidf = vectorizer.fit_transform(comparison_df['text'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "944b617f",
+   "id": "350928d0",
    "metadata": {},
    "source": [
     "# perform cosine distance computation"
@@ -301,18 +445,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23ae4784",
+   "execution_count": 31,
+   "id": "55017115",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values(['ticker', 'item'])"
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9c1959cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "885 ms ± 190 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "cosine_similarity(tfidf[:1000], tfidf[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f7c53748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.01 s ± 171 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "cosine_similarity(tfidf[:2000], tfidf[:2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "8403760a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.2 ms ± 6.32 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "(tfidf[:999].multiply(tfidf[1:1000]).sum(axis=1) / \\\n",
+    "     np.sqrt(tfidf[:999].multiply(tfidf[:999]).sum(axis=1)) / np.sqrt(tfidf[1:1000].multiply(tfidf[1:1000]).sum(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "902a6bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "161 ms ± 10.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "(tfidf[:1999].multiply(tfidf[1:2000]).sum(axis=1) / \\\n",
+    "     np.sqrt(tfidf[:1999].multiply(tfidf[:1999]).sum(axis=1)) / np.sqrt(tfidf[1:2000].multiply(tfidf[1:2000]).sum(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f8918998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.58 s ± 49.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "(tfidf[:-1].multiply(tfidf[1:]).sum(axis=1) / \\\n",
+    "     np.sqrt(tfidf[:-1].multiply(tfidf[:-1]).sum(axis=1)) / np.sqrt(tfidf[1:].multiply(tfidf[1:]).sum(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "1e360795",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.98227666],\n",
+       "        [0.99666753],\n",
+       "        [0.58170126],\n",
+       "        ...,\n",
+       "        [0.56405527],\n",
+       "        [0.93125178],\n",
+       "        [0.94108083]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(tfidf[:-1].multiply(tfidf[1:]).sum(axis=1) / \\\n",
+    "     np.sqrt(tfidf[:-1].multiply(tfidf[:-1]).sum(axis=1)) / np.sqrt(tfidf[1:].multiply(tfidf[1:]).sum(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "ecdf6fb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18301, 88229)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e1b132",
+   "id": "8a97a697",
    "metadata": {},
    "outputs": [],
    "source": []
